# RustGuestbook

./: Cargo.toml  README.md  Rocket.toml
db/: guestbook.db
src/: main.rs
static/css/: main.css
templates/: index.hbs  post.hbs  post_form.hbs  topic_form.hbs
