[package]
name = "RustGuestbook"
version = "0.1.0"
authors = ["Maplewing <sinmaplewing@gmail.com>"]

[dependencies]
rocket = "0.3.8"
rocket_codegen = "0.3.8"
rusqlite = "*"
chrono = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
